feat(user): block and unblock user with cascade integration, flow with publications, favorites and incidences