@@ -17,7 +17,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -70,11 +69,21 @@ public class FavoritePublicationService {
 
         return favorites.stream()
                 .map(favoritePublicationMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public boolean isFavorite(Long userId, Long publicationId) {
         return favoritePublicationRepository.existsByUserIdAndPublicationId(userId, publicationId);
+    }
+
+    @Transactional
+    public void removeFavoritesByPublicationId(Long publicationId) {
+        favoritePublicationRepository.softDeleteAllByPublicationId(publicationId);
+    }
+
+    @Transactional
+    public void restoreFavoritesByPublicationId(Long publicationId) {
+        favoritePublicationRepository.restoreAllByPublicationId(publicationId);
     }
 }
